# jsonpyd

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
examples/: schema.json  schema.py
src/jsonpyd/: __init__.py  cli.py  jsonpyd.py  util.py
tests/: test.py
